--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,6 @@ body {
     height: 100%;
     width: 100%;
     font-family: sans-serif;
-    overflow-x: hidden;
     max-width: 100vw;
 }
 img {
@@ -238,7 +237,7 @@ input {
 .suggestions {
     width: 80%;
     margin: auto;
-    margin-top: -1rem;
+    margin-top: 3rem;
     background: #2c2c2c;
     color: #fff;
 }
@@ -287,9 +286,10 @@ input {
     width: 20px;
     border: 3px solid white;
     border-radius: 50%;
+    text-align: center;
     position: absolute;
     top: 63px;
-    right: 0;
+    right: -30px;
     animation: rotate 1s infinite forwards;
 }
 
